testsuite/poke.pkl/printf-diag-23.pk
/* { dg-do compile } */

printf ("%f32x", 1U); /* { dg-error "" } */
